.gitignore and updated readme

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
 <li><code>laws</code></li>
 <li><code>search</code></li>
 </ol>
-<p>Each endpoint is accessible only with a <code>GET</code> request and will respond with a json object.</p>
+<p>Each endpoint is accessible only with a <code>GET</code> request and will respond with a json object. The <code>/measure</code> endpoint is supported from Council Period 8 through the present. As of right now, that is the only endpoint with data from before Council Period 20.</p>
 <h2 id="measure">Measure</h2>
 <h3 id="parameters">Parameters</h3>
 <p><code>/measure/:measure</code></p>
