updated documentation to include business about the council_period parameter

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
 <h3 id="parameters_3">Parameters</h3>
 <p><code>/search?q=&lt;q&gt;&amp;measure_type=&lt;measure_type&gt;&amp;status=&lt;status&gt;&amp;start_date=&lt;start_date&gt;&amp;council_period=&lt;council_period&gt;</code></p>
 <h3 id="example_3">Example</h3>
-<p><a href="https://openlims.herokuapp.com/search?q=technology&amp;measure_type=1&amp;status=0&amp;start_date=1/1/2015">https://openlims.herokuapp.com/search?q=technology&amp;measure_type=1&amp;status=0&amp;start_date=1/1/2015</a></p>
+<p><a href="https://openlims.herokuapp.com/search?q=technology&amp;measure_type=1&amp;status=0&amp;start_date=1/1/2015&amp;council_period=21">https://openlims.herokuapp.com/search?q=technology&amp;measure_type=1&amp;status=0&amp;start_date=1/1/2015&amp;council_period=21</a></p>
 <h3 id="description_3">Description</h3>
 <p>Allows you to do a full-text search against the LIMS database using the <code>q</code> parameter and to filter based on the other parameters. A listing of parameter values is available below.</p>
 <h1 id="parameter-details">Parameter Details</h1>
